# vscode-qttest

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .vscode-test.js  .vscodeignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Changelog  LICENSE  README.md  TODO  build_package.sh  cliff.toml  code.code-workspace  eslint.config.mjs  package-lock.json  package.json  release-please-config.json  run_manual_test.sh  test.sh  test_qttest.sh  tsconfig.json  tsconfig.test.json  upload_package.sh  vscode.code-workspace
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: build.yml  ci.yml  lints.yml  package.yml  pre-commit.yml  release-please.yml  version-bump.yml
src/: extension.ts
src/qttest-utils/: cmake.ts  index.ts  qttest.ts  test.ts  tsconfig.test.json  utils.ts
src/test/integration/: debug_cwd.test.ts  debug_environment.test.ts  discovery.test.ts  environment.test.ts  smoke.test.ts
src/test/suite/: extension.test.ts
test/: test_cmake_codemodel.json
test/qt_test/: CMakeLists.txt  CMakePresets.json  non_qttest.cpp  test.sh  test1.cpp  test2.cpp  test3.cpp  test_gtest.cpp  vscode.code-workspace
test/qt_test/nested_dir/: CMakeLists.txt  test_nested.cpp
